feat(back/test): create unit tests for CheckFactory, modify existing tests for CheckLoader and CheckLoaderUtils, and setup CheckRunner for tests